infrastructure/node-main/08-plex/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/part-of: media-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: plex
  ports:
    - name: http
      port: 32400
      targetPort: http
      protocol: TCP
